--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -48,3 +48,9 @@ libs.primefaces.classpath=\
 libs.primefaces.displayName=PrimeFaces 5.0
 libs.primefaces.prop-maven-dependencies=\n                org.primefaces:primefaces:5.0:jar\n            
 libs.primefaces.prop-maven-repositories=default:http://repository.primefaces.org/
+libs.PrimeFaces_6.0_-_primefaces-6.0.jar.classpath=\
+    ${base}/PrimeFaces_6.0_-_primefaces-6.0.jar/primefaces-6.0.jar
+libs.PrimeFaces_6.0_-_primefaces-6.0.jar.displayName=PrimeFaces 6.0
+libs.PrimeFaces_8.0.classpath=\
+    ${base}/PrimeFaces_8.0/primefaces-8.0.jar
+libs.PrimeFaces_8.0.displayName=PrimeFaces 8.0
